Add Our Specialist

--- a/index.html
+++ b/index.html
@@ -177,6 +177,112 @@
     </section>
     <!-- Services Area Starts -->
 
+    <!-- Specialist Area Starts -->
+    <section class="specialist-area" style="padding-bottom: 100px">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <div class="section-top text-center">
+                        <h2>Our specialish</h2>
+                        <!-- <p>Green above he cattle god saw day multiply under fill in the cattle fowl a all, living, tree word
+                            link available in the service for subdue fruit.</p> -->
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single-doctor mb-4 mb-lg-0">
+                        <div class="doctor-img">
+                            <img src="assets/images/doctor1.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="content-area">
+                            <div class="doctor-name text-center">
+                                <h3>Kabeer Ismail</h3>
+                                <h6>sr. faculty data science</h6>
+                            </div>
+                            <div class="doctor-text text-center">
+                                <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
+                                <ul class="doctor-icon">
+                                    <li><a href="#"><i class="fa fa-facebook"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-pinterest"></i><a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single-doctor mb-4 mb-lg-0">
+                        <div class="doctor-img">
+                            <img src="assets/images/doctor2.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="content-area">
+                            <div class="doctor-name text-center">
+                                <h3>Kuraysha</h3>
+                                <h6>sr. faculty plastic surgery</h6>
+                            </div>
+                            <div class="doctor-text text-center">
+                                <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
+                                <ul class="doctor-icon">
+                                    <li><a href="#"><i class="fa fa-facebook"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-pinterest"></i><a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single-doctor mb-4 mb-sm-0">
+                        <div class="doctor-img">
+                            <img src="assets/images/doctor3.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="content-area">
+                            <div class="doctor-name text-center">
+                                <h3>Khalid</h3>
+                                <h6>sr. faculty data science</h6>
+                            </div>
+                            <div class="doctor-text text-center">
+                                <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
+                                <ul class="doctor-icon">
+                                    <li><a href="#"><i class="fa fa-facebook"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-pinterest"></i><a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single-doctor">
+                        <div class="doctor-img">
+                            <img src="assets/images/doctor4.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="content-area">
+                            <div class="doctor-name text-center">
+                                <h3>Kaamila Ismail</h3>
+                                <h6>sr. faculty plastic surgery</h6>
+                            </div>
+                            <div class="doctor-text text-center">
+                                <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
+                                <ul class="doctor-icon">
+                                    <li><a href="#"><i class="fa fa-facebook"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-pinterest"></i><a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Specialist Area Starts -->
+
     <!-- Contact Us -->
     <section class="map-area section-padding" id="contactUs">
         <div class="container">
