--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-lg-5">
                     <h4>Caring for better life</h4>
-                    <h1>Leading the way in medical excellence</h1>
+                    <h2>Centre For Ophthalmology and Centre for Diabetes</h2>
                     <!-- <p>Earth greater grass for good. Place for divide evening yielding them that. Creeping beginning over gathered brought.</p> -->
-                    <a href="" class="template-btn mt-3">Contact Us</a>
+                    <a href="#contactUs" class="template-btn mt-3">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -343,18 +343,18 @@
                     <form action="#">
                         <div class="left">
                             <input type="text" placeholder="Enter your name" onfocus="this.placeholder = ''"
-                                onblur="this.placeholder = 'Enter your name'" required>
+                                onblur="this.placeholder = 'Enter your name'" style="border: 1px solid #a39e9e;" required>
                             <input type="email" placeholder="Enter email address" onfocus="this.placeholder = ''"
-                                onblur="this.placeholder = 'Enter email address'" required>
+                                onblur="this.placeholder = 'Enter email address'" style="border: 1px solid #a39e9e;" required>
                             <input type="text" placeholder="Enter subject" onfocus="this.placeholder = ''"
-                                onblur="this.placeholder = 'Enter subject'" required>
+                                onblur="this.placeholder = 'Enter subject'" style="border: 1px solid #a39e9e;" required>
                         </div>
                         <div class="right">
                             <textarea name="message" cols="20" rows="7" placeholder="Enter Message"
-                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'"
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'" style="border: 1px solid #a39e9e;"
                                 required></textarea>
                         </div>
-                        <button type="submit" class="template-btn">subscribe now</button>
+                        <button type="submit" class="template-btn">Submit</button>
                     </form>
                 </div>
             </div>
@@ -369,12 +369,12 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
                         <span>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Kabmed 
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright ©
+                            <script>document.write(new Date().getFullYear());</script> Kabmed All rights reserved | by <a href="https://xperts4all.netlify.com/"
+                                target="_blank">xperts4all</a>
                         </span>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-md-6" style="padding-bottom:16px;">
                         <div class="social-icons">
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
