--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-doctor mb-4 mb-lg-0">
                         <div class="doctor-img">
-                            <img src="assets/images/doctor1.jpg" alt="" class="img-fluid">
+                            <!-- <img src="assets/images/doctor1.jpg" alt="" class="img-fluid"> -->
                         </div>
                         <div class="content-area">
                             <div class="doctor-name text-center">
@@ -215,7 +215,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-doctor mb-4 mb-lg-0">
                         <div class="doctor-img">
-                            <img src="assets/images/doctor2.jpg" alt="" class="img-fluid">
+                            <!-- <img src="assets/images/doctor2.jpg" alt="" class="img-fluid"> -->
                         </div>
                         <div class="content-area">
                             <div class="doctor-name text-center">
@@ -237,7 +237,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-doctor mb-4 mb-sm-0">
                         <div class="doctor-img">
-                            <img src="assets/images/doctor3.jpg" alt="" class="img-fluid">
+                            <!-- <img src="assets/images/doctor3.jpg" alt="" class="img-fluid"> -->
                         </div>
                         <div class="content-area">
                             <div class="doctor-name text-center">
@@ -259,7 +259,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-doctor">
                         <div class="doctor-img">
-                            <img src="assets/images/doctor4.jpg" alt="" class="img-fluid">
+                            <!-- <img src="assets/images/doctor4.jpg" alt="" class="img-fluid"> -->
                         </div>
                         <div class="content-area">
                             <div class="doctor-name text-center">
