Update Our Specialiste

--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
                         <div class="content-area">
                             <div class="doctor-name text-center">
                                 <h3>Kabeer Ismail</h3>
-                                <h6>sr. faculty data science</h6>
+                                <h6>Eye Specialist/Eye surgeron</h6>
                             </div>
                             <div class="doctor-text text-center">
-                                <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
+                                <p>MBBCh (Wits) FCP(SA) BA(Unisa) MCFP(SA) LMCC(Canada) FLEX(USA) Dip Diabetes(Univ Cardiff UK)</p>
                                 <ul class="doctor-icon">
                                     <li><a href="#"><i class="fa fa-facebook"></i><a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i><a></li>
@@ -223,7 +223,7 @@
                                 <h6>sr. faculty plastic surgery</h6>
                             </div>
                             <div class="doctor-text text-center">
-                                <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
+                                <p>MBBCh (Wits) SASTM</p>
                                 <ul class="doctor-icon">
                                     <li><a href="#"><i class="fa fa-facebook"></i><a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i><a></li>
@@ -267,7 +267,7 @@
                                 <h6>sr. faculty plastic surgery</h6>
                             </div>
                             <div class="doctor-text text-center">
-                                <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
+                                <p>MBBCh (Wits) Dip Diabetes(Univ Giamorgan UK) </p>
                                 <ul class="doctor-icon">
                                     <li><a href="#"><i class="fa fa-facebook"></i><a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i><a></li>
